[package]
name = "team-ai"
version = "0.5.1"
description = "An OpenAI powered Tauri application"
authors = ["Péter Blénessy"]
license = "MIT License"
repository = "https://github.com/PeterBlenessy/TeamAI"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "^0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = "2.0.0-beta.9"
tauri-plugin-updater = "2.0.0-beta.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "team_ai_app_lib"
crate-type = ["rlib", "cdylib", "staticlib"]
