[package]
name = "team-ai"
version = "2.0.0"
description = "An OpenAI powered Tauri application"
authors = ["Péter Blénessy"]
license = "MIT License"
repository = "https://github.com/PeterBlenessy/TeamAI"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "^0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2.3.1"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "team_ai_app_lib"
crate-type = ["rlib", "cdylib", "staticlib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
